--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -37,7 +37,7 @@ jobs:
         pyinstaller --onefile --noconsole --icon=favicon.ico --name "PPSUC-OneClickLogin-${{ matrix.arch }}" PPSUC-OneClickLogin.py
 
     - name: Upload Artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
-        name: windows-executables-${{ matrix.arch }}
+        name: ${{ github.event.repository.name }}-${{ matrix.arch }}
         path: dist/*
