--- a/.github/workflows/build-app-arch.yml
+++ b/.github/workflows/build-app-arch.yml
@@ -1,9 +1,9 @@
-name: Build App
+name: Build App For Different Architectures
 
 on:
   push:
     branches:
-      - master
+      - UserAgent
 
 jobs:
   build:
@@ -34,7 +34,7 @@ jobs:
 
     - name: Build executable with PyInstaller for ${{ matrix.arch }}
       run: |
-        pyinstaller --onefile --noconsole --icon=favicon.ico --add-data "favicon.ico;." --name "PPSUC-OneClickLogin-${{ matrix.arch }}" PPSUC-OneClickLogin.py
+        pyinstaller --onefile --noconsole --icon=favicon.ico --add-data "favicon.ico;." --name "PPSUC-OneClickLogin-${{ matrix.arch }}" "PPSUC-OneClickLogin-${{ matrix.arch }}.py"
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
